--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,18 @@
-html, body {
+html {
+  width: 100%;
+  height: 100vh;
+}
+
+body {
   margin: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #0B1014
 }
 
 code {
